--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/extension-underline": "^3.10.2",
     "@tiptap/react": "^3.10.2",
     "@tiptap/starter-kit": "^3.10.2",
+    "@vercel/blob": "^2.0.0",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
